--- a/src/App.css
+++ b/src/App.css
@@ -75,11 +75,21 @@ li {
 }
 
 .Editor-input {
+  -ms-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box; 
+  box-sizing:border-box;
   width: 100px;
 }
 
 .Like-link {
   cursor:pointer;
   color:blue;
+  text-decoration:underline;
+}
+
+.Like-link-selected {
+  cursor:pointer;
+  color:red;
   text-decoration:underline;
 }
